<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/preference_category_general">

        <SwitchPreference
            android:key="@string/download_only_vpn"
            android:title="@string/download_only_vpn" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_category_about_funkytunes">

        <Preference
            android:title="@string/github_repository_title"
            android:summary="@string/github_repository_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_repository_url" />
        </Preference>

        <Preference
            android:title="@string/gitlab_mirror_title"
            android:summary="@string/gitlab_mirror_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/gitlab_mirror_url" />
        </Preference>

        <Preference
            android:key="version"
            android:title="@string/version" />

    </PreferenceCategory>

</PreferenceScreen>
