<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/license"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="ButtonStyle">

                <Button
                    android:id="@+id/leave"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/leave"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/accept"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>